--- a/fe/bikefitting-fe/index.html
+++ b/fe/bikefitting-fe/index.html
@@ -12,10 +12,12 @@
     <meta name="apple-mobile-web-app-title" content="Bike Fitting" />
     <meta name="mobile-web-app-capable" content="yes" />
     
-    <!-- SEO and Description -->
-    <meta name="description" content="Professional bike fitting application for optimal cycling performance" />
-    <meta name="keywords" content="bike fitting, cycling, sports, health, fitness" />
-    <meta name="author" content="Bike Fitting App" />
+    <!-- Private App - No Indexing -->
+    <meta name="robots" content="noindex, nofollow, noarchive, nosnippet, noimageindex" />
+    <meta name="googlebot" content="noindex, nofollow, noarchive, nosnippet, noimageindex" />
+    <meta name="bingbot" content="noindex, nofollow, noarchive, nosnippet, noimageindex" />
+    <meta name="description" content="Private bike fitting application" />
+    <meta name="author" content="Danko Curlin (https://github.com/Theanko1412)" />
     
     <!-- Icons -->
     <link rel="apple-touch-icon" href="/bike-192.png" />
