--- a/fe/bikefitting-fe/public/404.html
+++ b/fe/bikefitting-fe/public/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Bike Fitting App</title>
+    <title>Segin Bike Fitting</title>
     <script type="text/javascript">
         // GitHub Pages SPA redirect script for /bike-fitting/ base path
         var l = window.location;
