--- a/fe/bikefitting-fe/index.html
+++ b/fe/bikefitting-fe/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-    <link rel="icon" href="./s.svg" type="image/svg+xml" />
+    <link rel="icon" href="./stransparent.svg" type="image/svg+xml" />
     
     <!-- PWA Configuration -->
     <meta name="theme-color" content="#0f0f0f" />
